--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --port 8080",
     "build": "vite build",
-    "serve": "vite preview",
+    "start": "vite preview",
     "type-check": "tsc --pretty --noEmit"
   },
   "license": "MIT",
