--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
       "@contexts/*": [
         "src/contexts/*"
       ],
+      "@features/*": [
+        "src/features/*"
+      ],
       "@hooks/*": [
         "src/hooks/*"
       ],
