add font import model

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "import"
   ],
   "rules": {
+    "@typescript-eslint/no-namespace": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
