--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@solidjs/router": "^0.4.3",
+    "history": "^5.3.0",
     "solid-js": "^1.5.1",
     "solid-styled-components": "^0.28.5"
   },
