--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@solidjs/router": "^0.4.3",
-    "solid-js": "^1.5.1",
-    "solid-styled-components": "^0.28.5"
+    "solid-js": "^1.5.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.13",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -25,7 +24,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-solid": "^0.8.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-eslint": "^1.8.1",
